5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4059/executions/1643_2446.log
== TEST (2019-04-12 15:08:52) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - f*100)//10

if ((b+d+f)%(a+c+e)=0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
File "XXXX", line 10
    if ((b+d+f)%(a+c+e)=0):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:11:14) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - f*100)//10

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - f*100)//10
NameError: name 'f' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:11:36) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:11:44) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:15:29) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.190316
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:15:30) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:16:00) 
-- CODE:
senha=int(input())

a=senha//1000000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10
print(a,b,c,d,e,f)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0 0 8 -713 6 1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:16:25) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*1000000)//100000
c=(senha - a*1000000 - b*100000)//10000
d=(senha - a*1000000 - b*100000 - c*100000)//1000
e=(senha - a*1000000 - b*100000 - c*100000 - d*1000)//100
f=(senha - a*1000000 - b*100000 - c*100000 - d*1000 - e*100)//10
print(a,b,c,d,e,f)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0 0 8 -713 6 1
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:17:18) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*10000)//100
e=(senha - a*100000 - b*10000 - c*10000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*10000 - d*1000 - e*10)
print(a,b,c,d,e,f)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0 8 7 -624 1 561602
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:18:10) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*10000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*10000 - d*1000 - e*10)
print(a,b,c,d,e,f)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0 8 7 6 -6299 -5398
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:18:31) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)
print(a,b,c,d,e,f)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
0 8 7 6 1 2
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 15:18:45) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:19:08) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)
if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.209385
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:19:21) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.132886
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:19:24) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.200384
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
acesso liberado
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 15:19:24) 
-- CODE:
senha=int(input())

a=senha//100000
b=(senha - a*100000)//10000
c=(senha - a*100000 - b*10000)//1000
d=(senha - a*100000 - b*10000 - c*1000)//100
e=(senha - a*100000 - b*10000 - c*1000 - d*100)//10
f=(senha - a*100000 - b*10000 - c*1000 - d*100 - e*10)

if ((b+d+f)%(a+c+e)==0):
	print("acesso liberado")
else:
	print("senha invalida")
-- EXECUTION TIME:
0.185177
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
